SERVER-23403 Encrypted Storage Engine endian fixes

GitOrigin-RevId: 5ac07968fee0a58817395ae30d10b7e893db4db7